<resources>
    <string name="app_name">CustomDatePickerDialogTest</string>
    <string name="customer_display_product_name">Product name</string>
    <string name="customer_display_t_kg">Tare kg</string>
    <string name="zero_weight" translatable="false">0.000</string>
    <string name="customer_display_kg">kg</string>

    <string name="sunday">Su</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
</resources>