<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_margin="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.example.comptest.ui.CalendarNavigationButton
                android:id="@+id/button_nav_left"
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:imageRef="@drawable/ic_baseline_arrow_left_24"/>

            <TextView
                android:id="@+id/text_view_month_year"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_nav_left"
                app:layout_constraintEnd_toStartOf="@+id/button_nav_right"
                android:text="September, 2021"/>

            <com.example.comptest.ui.CalendarNavigationButton
                android:id="@+id/button_nav_right"
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:imageRef="@drawable/ic_baseline_arrow_right_24"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/monday"/>

            <TextView
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/tuesday"/>

            <TextView
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/wednesday"/>

            <TextView
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/thursday"/>

            <TextView
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/friday"/>

            <TextView
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/saturday"/>

            <TextView
                android:layout_width="@dimen/custom_date_picker_button"
                android:layout_height="@dimen/custom_date_picker_button"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/sunday"/>

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/months_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/right_side"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_selected_month_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="Dezember 2021"
            app:layout_constraintBottom_toTopOf="@+id/selected_day_name_date_text_view" />

        <TextView
            android:id="@+id/selected_day_name_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:text="Mittwoch, 15"
            app:layout_constraintTop_toBottomOf="@+id/text_view_selected_month_year"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/ok_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:textColor="@color/black"
                android:text="OK"
                app:layout_constraintBottom_toTopOf="@+id/cancel_button"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="ABBRECHEN"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:background="@color/colorTransparent"
                app:layout_constraintTop_toBottomOf="@+id/ok_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>